--- a/app4/package.json
+++ b/app4/package.json
@@ -8,17 +8,16 @@
   "dependencies": {
     "connect-sqlite3": "^0.9.11",
     "cookie-parser": "~1.4.3",
+    "cool-ascii-faces": "^1.3.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
-    "express-ws": "^4.0.0",
-    "express-ws-routes": "^1.1.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "memorystore": "^1.6.0",
     "morgan": "~1.9.0",
     "socket.io": "^2.1.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^6.1.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.0",
