--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "querystring": "^0.2.0",
     "socket.io": "^2.1.1",
+    "url": "^0.11.0",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
   },
