--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "connect-sqlite3": "^0.9.11",
     "cookie-parser": "~1.4.3",
     "cool-ascii-faces": "^1.3.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
-    "html-to-text": "^4.0.0",
+    "html-to-text": "^8.0.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "morgan": "~1.9.0",
     "querystring": "^0.2.0",
     "socket.io": "^2.1.1",
